# minizinc-discord

./: Dockerfile  Pipfile  README.md  minizinc_discord.py  pyproject.toml
.github/workflows/: build-and-push.yml
